# content-asset-factory

./: .gitignore  README.md  pyproject.toml  testme.py
assets/raw/: evo_soda_summer_launch_copy.txt
caf_app/: campaign_generator.py  copy_gen.py  image_gen.py  models.py  run_campaign_demo.py  run_copy_demo.py  run_image_demo.py  storage.py  test_env.py  text_gen.py  utils.py
config/: settings.py
services/: image_service.py
ui/: app.py  home.py
ui/pages/: 01_Dashboard.py  02_Brief_Editor.py  03_Text_Library.py  04_Image_Library.py  05_Concept_Builder.py  06_Review_Export.py
